--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bulma": "^1.0.4",
+    "chart.js": "^4.5.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
